Fixes viusal bug with modals on mobile

--- a/frontend/src/app/components/modals/base-modal.scss
+++ b/frontend/src/app/components/modals/base-modal.scss
@@ -93,9 +93,10 @@
 
     .modal-content {
       width: 90%;
+      margin: 2rem auto auto auto;
 
       .modal-body {
-        max-height: 75vh;
+        max-height: 70vh;
         padding: 1rem;
       }
     }
